--- a/DataAccess/DataAccess.fsproj
+++ b/DataAccess/DataAccess.fsproj
@@ -8,4 +8,8 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FSharp.Data" Version="2.4.2" />
+  </ItemGroup>
+
 </Project>
